# infinigen-agents

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  README_AI_SYSTEM.md  TERRAIN_FEATURES_SUMMARY.md  TERRAIN_RENDERING_SUCCESS.md  blender_terrain_test.py  debug_knowledge.py  demo_intelligent_learning.py  demo_modern_terrain.py  demo_orchestrator_agent.py  demo_pydantic_graph_orchestrator.py  demo_pydantic_orchestrator.py  docker-compose.yml  fill_knowledge_base.py  generate_modern_terrain.py  infinigen_agent_knowledge.py  infinigen_ai_system.py  missing_terrain_features.md  pyproject.toml  run_terrain_tests.py  simple_integration_test.py  test_advanced_terrain.py  test_agent_knowledge.py  test_complete_terrain.py  test_core_terrain.py  test_direct_terrain.py  test_engine_only.py  test_fixed_terrain_rendering.py  test_geometry_baking.py  test_modern_examples.py  test_modern_terrain_rendering.py  test_modern_trees.py  test_optimized_terrain_rendering.py  test_orchestrator.py  test_sample_operations.py  test_simple_trees.py  test_system_simple.py  (+9 more)
.github/: MCP_SETUP_GUIDE.md  README.md  copilot-instructions.md
.github/prompts/: onboarding-plan.prompt.md
.github/workflows/: checks.yml  release.yml
agents/: __init__.py  addon_manager.py  asset_generator.py  data_manager.py  export_specialist.py  orchestrator_agent.py  render_controller.py  scene_composer.py  terrain_engineer.py
config/: ai_system_config.py
infinigen/agent_config/: __init__.py  ai_system_config.py  model_factory.py
infinigen/agent_deps/: addon_deps.py  asset_deps.py  config_deps.py  knowledge_deps.py  model_deps.py
infinigen/agent_tools/: asset_tools.py  ast_udfs.py  blender_tools.py  constraint_tools.py  core_tools.py  intelligent_orchestrator.py  osm_integration.py  scene_tools.py
infinigen/agents/: addon_manager.py  asset_generator.py  cli.py  data_manager.py  export_specialist.py  orchestrator_agent.py  render_controller.py  scene_composer.py  terrain_engineer.py
infinigen/assets/materials/: text.py
infinigen/assets/materials/creature/: beak.py
infinigen/assets/materials/fluid/: lava.py  water.py
infinigen/assets/materials/plant/: bark.py
infinigen/assets/materials/terrain/: dirt.py  ice.py  mountain.py  sand.py  soil.py  stone.py
infinigen/assets/materials/utils/: surface_utils.py
infinigen/assets/objects/astronomy/: __init__.py  asteroids.py  constraints.py  moons.py  nebulae.py  planets.py  space_stations.py  stars.py
infinigen/assets/objects/cloud/: node.py
infinigen/assets/objects/corals/: elkhorn.py  generate.py  tentacles.py
infinigen/assets/objects/creatures/: beetle.py  carnivore.py  fish.py
infinigen/assets/objects/creatures/parts/: eye_new.py  head.py  head_detail.py
infinigen/assets/objects/creatures/util/: rigging.py
infinigen/assets/objects/creatures/util/animation/: run_cycle.py
infinigen/assets/objects/decor/: aquarium_tank.py
infinigen/assets/objects/fruits/: general_fruit.py
infinigen/assets/objects/mushroom/: cap.py
infinigen/assets/objects/rocks/: blender_rock.py  boulder.py
infinigen/assets/objects/small_plants/: succulent.py
infinigen/assets/objects/tableware/: lid.py
infinigen/assets/objects/trees/: __init__.py  generate.py  tree.py  tree_factory.py  tree_flower.py
infinigen/assets/objects/tropic_plants/: coconut_tree.py  palm_tree.py
infinigen/assets/objects/wall_decorations/: skirting_board.py  wall_shelf.py
infinigen/assets/scatters/: chopped_trees.py  snow_layer.py
infinigen/assets/sim_objects/: doublefridge.py  mapping.py  satellite.py  singlefridge.py  space_station.py
infinigen/assets/sim_objects/blueprints/: satellite.json  space_station.json
infinigen/core/: execute_tasks.py  init.py  surface.py  tagging.py  tags.py
infinigen/core/nodes/: node_info.py  node_utils.py  node_wrangler.py
infinigen/core/nodes/node_transpiler/: transpiler.py
infinigen/core/placement/: placement.py
infinigen/core/rendering/: post_render.py
infinigen/core/util/: exporting.py  organization.py  random.py
infinigen/datagen/: manage_jobs.py
infinigen/datagen/util/: submitit_emulator.py  upload_util.py
infinigen/terrain/: README.md  __init__.py  advanced_features.py  core.py  terrain_engine.py
infinigen/terrain/assets/caves/: pcfg.py
infinigen/terrain/elements/: ground.py
infinigen/terrain/engine/: __init__.py  terrain_engine.py
infinigen/terrain/engine/generators/: __init__.py  base_generator.py  map_generator.py  mesh_generator.py
infinigen/terrain/engine/processors/: __init__.py  base_processor.py  kernels_processor.py  pytorch_geometric_processor.py
infinigen/terrain/engine/storage/: __init__.py  duckdb_spatial_manager.py
infinigen/terrain/mesher/: spherical_mesher.py  uniform_mesher.py
infinigen/terrain/rendering/: __init__.py  modern_lighting.py
infinigen/terrain/tests/: __init__.py  test_integration.py
infinigen/terrain/utils/: __init__.py  camera.py  image_processing.py  logging.py  mesh.py  random.py
infinigen/tools/results/: parse_videos.py
infinigen_examples/: README_astronomy.md  astronomy_workflow.py  astronomy_workflow_demo.py  create_astronomy_film.py  generate_3d_astronomy.py  generate_astronomy.py  generate_nature.py  mcp_server.py  test_astronomy.py  test_astronomy_sim.py
infinigen_examples/configs_astronomy/: __init__.py  constraints.gin  nebulae.gin  planets.gin  sim_objects.gin  space_objects.gin
infinigen_examples/util/: generate_indoors_util.py
tests/assets/: test_placeholders.py
tests/core/: test_execute_tasks.py
tests/datagen/: test_manage_jobs.py
tools/: __init__.py  advanced_terrain_engine.py  asset_tools.py  ast_udfs.py  constraint_tools.py  core_tools.py  file_tools.py  intelligent_orchestrator.py  modern_terrain_engine.py  modern_tree_system.py  simple_tree_system.py  terrain_tools.py
