[build-system]
requires = ["setuptools", "numpy", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "infinigen"
readme = "README.md"
license = "BSD-3-Clause"
dynamic = ["version"]

description = "Infinite Photorealistic Worlds using Procedural Generation"
keywords = [
    "computer vision",
    "data generation",
    "procedural"
]
classifiers = [
    "Programming Language :: Python :: 3",
]

requires-python = "==3.11.*"
dependencies = [
    # Core dependencies that work on Windows
    "gin_config>=0.5.0",
    "imageio>=2.33.0", # Updated for scikit-image compatibility
    "matplotlib",
    "networkx",
    "numpy<2",
    "opencv-python<4.9.0",
    "pandas",
    "psutil",
    "scipy",
    "shapely>=2.1.0", # Updated to latest stable version
    "tqdm",
    "trimesh<3.23.0",
    "OpenEXR",
    "submitit",
    "geomdl",
    "python-fcl",
    "rtree",
    # Advanced features - all working on Windows
    "scikit-image>=0.25.0", # Newer version with pre-compiled wheels
    "scikit-learn<1.4.0", # Updated to latest Blender version
    "coacd",
    # Modern visualization - replacing matplotlib
    "plotly>=6.2.0",
    "altair>=5.5.0",
    "pillow>=10.0.0",
    "kaleido>=1.0.0",
    "bpy>=4.5.3",
    "mcp>=1.13.1",
    "pydantic-ai[huggingface]>=1.0.8",
    "pydantic-graph>=0.1.0",
    "duckdb[extensions]>=1.4.0",
    "sentence-transformers>=5.1.0",
    # PyTorch dependencies moved to optional to avoid build issues
    # "torch>=2.0.0",
    # "torch-geometric>=2.4.0",
    # "torch-scatter>=2.1.0",
    # "torch-sparse>=0.6.0",
    "kernels>=0.10.1",
    "overpy>=0.7",
    "requests>=2.32.4",
    "gpytorch>=1.14",
    "torch-geometric>=2.6.1",
]

[project.optional-dependencies]
terrain = [
    "landlab>=2.6.0",      # Updated to allow newer versions
    "pyrender>=0.1.45",    # Updated for better Blender 4.5.3 compatibility
    "setuptools>=75.0.0"   # Updated for modern Python packaging
]
pytorch = [
    "torch>=2.0.0",
    "torch-geometric>=2.4.0",
    "torch-scatter>=2.1.0",
    "torch-sparse>=0.6.0"
]
vis = [
    "einops>=0.8.0",       # Updated for better tensor operations
    "flow_vis>=0.1.0",     # Updated version
    "numba>=0.60.0",       # Updated for better performance
    "pyglet>=2.0.0"        # Updated to modern version (removed restriction)
]
dev = [
    "pytest>=8.0.0",       # Updated to modern version
    "pytest-cov>=6.0.0",   # Updated version
    "pytest-xdist>=3.6.0", # Updated for parallel testing
    "pytest-timeout>=2.4.0", # Updated version
    "ruff>=0.8.0",          # Updated to latest version
    "isort>=5.14.0",        # Updated version
    "tabulate>=0.9.0",      # Updated version
    "rapidfuzz>=3.10.0",    # Updated version
    "pre-commit>=4.0.0"     # Updated to modern version
]
wandb = [
    "wandb>=0.18.0"         # Updated to modern version
]

[tool.uv]
link-mode = "copy"

[tool.uv.extra-build-dependencies]
torch-scatter = ["torch"]
torch-sparse = ["torch"]

[tool.setuptools]
include-package-data = false
license-files = []

[tool.setuptools.packages.find]
include = ["infinigen*"]
exclude = [
    "infinigen.datagen.customgt.dependencies*",
    "infinigen.datagen.customgt.build*",
]

[tool.setuptools.package-data]
"*" = ["*.gin", "*.txt", "*.json"]
"infinigen" = [
    "terrain/**/*.soil",
    "terrain/lib/**/*.so",
    "terrain/lib/**/*.o",
    "datagen/customgt/build/customgt",
    "assets/objects/creatures/parts/nurbs_data/*.npy",
]

[project.scripts]
infinigen-agent = "infinigen.agents.cli:main"

[tool.setuptools.dynamic]
version = {attr = "infinigen.__version__"}

[tool.pytest.ini_options]
testpaths = "tests"
junit_family = "xunit2"
markers = ["nature", "indoors", "skip_for_ci"]
timeout = 480

filterwarnings = [
    "ignore:The value of the smallest subnormal for <class 'numpy.float:UserWarning",
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
    "ignore:Importing from numpy.matlib is deprecated since 1.19.0:PendingDeprecationWarning",
    "ignore:Please import `label` from the `scipy.ndimage` namespace; the `scipy.ndimage.measurements` namespace is deprecated and will be removed in SciPy 2.0.0:DeprecationWarning"
]

[tool.cibuildwheel]
test-extras = ["dev"]
test-command = "pytest tests"

[tool.ruff]
target-version = "py310"
exclude = [
    "*.ipynb",
    "infinigen/datagen/customgt/dependencies/",
    "infinigen/OcMesher",
    "infinigen/infinigen_gpl",
    "infinigen/terrain/mesh_to_sdf",
    "infinigen/terrain/mesher/_marching_cubes_lewiner*"
]

[tool.ruff.lint]
select = [
    "E",
    "I",
    "F",
    "S102",
    "TID252",
]
ignore = [
    "E501",
    "E741",
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    "F401",
    "CPY001",
]
"infinigen/assets/*" = ["F841"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"
